--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/suzuki/karma-samples",
   "devDependencies": {
+    "http-server": "^0.8.0",
     "jasmine-core": "^2.3.2",
     "karma": "^0.12.31",
     "karma-chrome-launcher": "^0.1.8",
